syntax = "proto3";

option go_package = "./dice";

// The service definition.
service Tutorial {
    // Sends a RollDice
    rpc RollDice (RollDiceRequest) returns (RollDiceResponse) {}
}
  
// The request message containing the user's name.
message RollDiceRequest {
    int32  num = 1;
}
  
// The response message containing the greetings
message RollDiceResponse {
    repeated int32 dice = 1;
}